Notify admin on various errors.

--- a/gobearmon.sample.worker.cfg
+++ b/gobearmon.sample.worker.cfg
@@ -18,6 +18,7 @@ port = 587
 from = noreply@gobearmon
 username = gobearmon
 password = gobearmon
+admin = admin@gobearmon
 
 [twilio]
 accountSid = asdf
