--- a/gobearmon.sample.viewserver.cfg
+++ b/gobearmon.sample.viewserver.cfg
@@ -1,5 +1,7 @@
 [default]
 debug = false
+
+; shared secret
 password = secretChangeMe
 
 [smtp]
@@ -10,7 +12,17 @@ username = gobearmon
 password = gobearmon
 
 [viewserver]
+; listen address, must be reachable by other workers and the viewserver
 addr = :8888
+
+; host/port of the controller component in workers
+; the viewserver will continuously connect to all workers to verify they are up
+; if the current controller goes down:
+;  * the viewserver will pick a new controller from the workers that are up
+;  * the next time each worker asks the viewserver for the current controller,
+;    the viewserver will return the corresponding host/port below
+;  * each worker will then connect to the new controller, and the new controller
+;    will coordinate monitoring
 controller = worker1:8888
 controller = worker2:8888
 controller = worker3:8888
