--- a/gobearmon.sample.worker.cfg
+++ b/gobearmon.sample.worker.cfg
@@ -1,16 +1,28 @@
 [default]
 debug = false
+
+; shared secret
 password = secretChangeMe
 
 [controller]
+; listen address, must be reachable by other workers and the viewserver
 addr = :8888
+
+; MySQL database configuration
+; if you are using a cluster, you can specify multiple databases, then queries
+;  that fail will be retried
 database = monitor@tcp(mysql1:3306)/monitor
 database = monitor@tcp(mysql2:3306)/monitor
 database = monitor@tcp(mysql3:3306)/monitor
+
+; the number of workers that should perform a check before the check fails
 confirmations = 3
 
 [worker]
+; host/port of the viewserver
 viewAddr = viewserver:8888
+
+; number of concurrent goroutines for running checks
 numThreads = 16
 
 [smtp]
@@ -20,6 +32,9 @@ from = noreply@gobearmon
 username = gobearmon
 password = gobearmon
 admin = admin@gobearmon
+
+[dns]
+server = 127.0.0.1
 
 [twilio]
 accountSid = asdf
